# orph-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FIRE_TEST_ROLE.md  LICENSE  Makefile  README.md  RELEASE_GUIDE_v0.1.1.md  ROADMAP.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: ipc.rs  lib.rs  main.rs
src/cli/: mod.rs
src/commands/: cfg.rs  completions.rs  core.rs  logs.rs  mod.rs  pet.rs  run.rs  sys.rs  telemetry.rs
src/daemon/: ipc_server.rs  main.rs
src/daemon/handlers/: mod.rs
src/models/: config.rs  mod.rs  pet.rs
src/services/: config_service.rs  db.rs  logger.rs  mod.rs  pet_service.rs  telemetry.rs
tests/: pet_service_unit.rs  smoke.rs
