[package]
name = "orph-cli"
version = "0.1.1"
edition = "2024"
description = "orph — local-first cyberdeck CLI tooling system"
license = "MIT"
repository = "https://github.com/CoreRed-Project/orph-cli"
keywords = ["cli", "cyberdeck", "raspberry-pi", "local-first", "daemon"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[[bin]]
name = "orph"
path = "src/main.rs"

[[bin]]
name = "orphd"
path = "src/daemon/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.38.4"
anyhow = "1"
clap_complete = "4"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

